# romea-ros2-rtls-transceiver

./: .gitlab-ci.yml  romea_rtls.repos  romea_rtls_transceiver.repos
romea_rtls_transceiver/: CMakeLists.txt  package.xml
romea_rtls_transceiver_bringup/: CMakeLists.txt  package.xml
romea_rtls_transceiver_bringup/launch/: anchor_gazebo_spawner.launch.py  rtls_driver.launch.py  rtls_transceiver.launch.py  rtls_transceiver_driver.launch.py
romea_rtls_transceiver_bringup/launch/drivers/: romea_decawave_driver.launch.py  romea_trackbod_driver.launch.py
romea_rtls_transceiver_bringup/python/: romea_rtls_transceiver_bringup.py
romea_rtls_transceiver_bringup/scripts/: urdf_description.py
romea_rtls_transceiver_bringup/test/: test_rtls_transceiver_bringup.py  test_rtls_transceiver_bringup.yaml  test_rtls_transceiver_bringup_tag0.yaml  test_rtls_transceiver_bringup_tag1.yaml  test_urdf_description.py
romea_rtls_transceiver_description/: CMakeLists.txt  package.xml
romea_rtls_transceiver_description/config/: decawave_4GHz_6M8bit.yaml  decawave_4GHz_6M8bit_noise.yaml  decawave_4GHz_6M8bit_phy.yaml
romea_rtls_transceiver_description/python/: romea_rtls_transceiver_description.py
romea_rtls_transceiver_description/test/: test_rtls_transceiver_description.py
romea_rtls_transceiver_description/urdf/: anchor.xacro  anchor_decawave_4GHz_6M8bit.xacro.urdf  decawave_4GHz_6M8bit.xacro.urdf  transceiver.xacro  transceiver_decawave_4GHz_6M8bit.xacro.urdf
romea_rtls_transceiver_gazebo/: CMakeLists.txt  package.xml
romea_rtls_transceiver_gazebo/include/romea_rtls_transceiver_gazebo/: gazebo_ros_rtls_network.hpp  gazebo_ros_rtls_transceiver.hpp  gazebo_ros_rtls_transceiver_interface.hpp
romea_rtls_transceiver_gazebo/src/: gazebo_ros_rtls_network.cpp  gazebo_ros_rtls_transceiver.cpp  gazebo_ros_rtls_transceiver_interface.cpp
romea_rtls_transceiver_gazebo/test/: CMakeLists.txt  test_gazebo_ros_rtls_transceiver.cpp  test_gazebo_ros_rtls_transceiver.world
romea_rtls_transceiver_hub/: CMakeLists.txt  package.xml
romea_rtls_transceiver_hub/include/romea_rtls_transceiver_hub/: rtls_transceiver_hub.hpp  visibility_control.h
romea_rtls_transceiver_hub/src/: rtls_transceiver_hub.cpp  rtls_transceiver_hub_node.cpp
romea_rtls_transceiver_hub/test/: CMakeLists.txt  test_rtls_transceiver_hub.cpp  test_rtls_transceiver_hub.yaml
romea_rtls_transceiver_msgs/: CMakeLists.txt  package.xml
romea_rtls_transceiver_msgs/action/: Ranging.action
romea_rtls_transceiver_msgs/msg/: Poll.msg  Range.msg  RangingRequest.msg  RangingResult.msg  TransceiverEUID.msg  Transceivers.msg
romea_rtls_transceiver_msgs/srv/: GetPayload.srv  GetSetPayload.srv  SetPayload.srv  SetTransceiversConfiguration.srv
romea_rtls_transceiver_utils/: CMakeLists.txt  package.xml
romea_rtls_transceiver_utils/include/romea_rtls_transceiver_utils/: rtls_conversions.hpp  rtls_transceiver_data_conversions.hpp  rtls_transceiver_interface.hpp  rtls_transceiver_interface_client.hpp  rtls_transceiver_interface_server.hpp  rtls_transceiver_parameters.hpp  transceiver_interface_client.hpp  transceiver_interface_server.hpp  transceiver_parameters.hpp
romea_rtls_transceiver_utils/src/: rtls_conversions.cpp  rtls_transceiver_data_conversions.cpp  rtls_transceiver_interface.cpp  rtls_transceiver_interface_client.cpp  rtls_transceiver_interface_server.cpp  rtls_transceiver_parameters.cpp  transceiver_interface_client.cpp  transceiver_interface_server.cpp  transceiver_parameters.cpp
romea_rtls_transceiver_utils/test/: CMakeLists.txt  test_transceiver_interface.cpp  test_transceiver_interfaces.cpp  test_transceiver_parameters.cpp  test_transceiver_parameters.yaml  test_transceiver_server_client_interfaces.cpp
