<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romea_rtls_transceiver_gazebo</name>
  <version>0.1.0</version>
  <description> Gazebo plugin for RTLS transceivers. </description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license> TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>romea_core_common</depend>
  <depend>romea_core_rtls</depend>
  <depend>romea_rtls_transceiver_msgs</depend>
  <depend>romea_rtls_transceiver_utils</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>