<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romea_rtls_transceiver_hub</name>
  <version>0.0.0</version>
  <description>Rtls transceiver hub driver</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>romea_core_common</depend>
  <depend>romea_core_rtls</depend>
  <depend>romea_common_utils</depend>
  <depend>romea_rtls_transceiver_utils</depend>
  <depend>romea_rtls_transceiver_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>